--- a/exercicios/Desafios/Desafio 12/style/estilo.css
+++ b/exercicios/Desafios/Desafio 12/style/estilo.css
@@ -1,3 +1,13 @@
+@charset "UTF-8";
+
+*{
+    padding: 0px;
+    margin: 0px;
+}
+ html, body {
+    min-height: 100vh;
+    background-color: darkgray;
+ }
 body{
     background-image: url('');
 }
@@ -5,26 +15,49 @@ header{
     background-color: black;
     color: white;
     text-align: center;
-    height: 200px;
-    padding: 50px;
 }
 header h1{
     font-size: 5em;
-    font-weight: bold;            
+    font-weight: bold; 
+    padding-top: 50px;
+    font-variant: small-caps;          
 }
-main p{
-    font-weight: bolder;
+header p {
+    padding-bottom: 50px;
 }
-footer{
+
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 30px;
+}
+
+section.normal {
+    background-color: white;
+    color: black;
+}
+
+section.imagem {
+    background-color: rgb(51, 51, 51);
     color: white;
-    background-color: black;
-    text-align: center;
 }
-a:hover{
-    text-decoration: underline;
+section.imagem > p {
+    background-color: rgba(0, 0, 0, 0.249);
+    width: 400px;
 }
 a{
     text-decoration: none;
     font-weight: bolder;
     color: white;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+footer{
+    color: white;
+    background-color: black;
+    text-align: center;
+    padding: 10px;
 }
