--- a/exercicios/Desafios/Desafio 12/style/estilo.css
+++ b/exercicios/Desafios/Desafio 12/style/estilo.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 *{
     padding: 0px;
     margin: 0px;
@@ -17,10 +27,11 @@ header{
     text-align: center;
 }
 header h1{
-    font-size: 5em;
+    font-size: 10vh;
     font-weight: bold; 
     padding-top: 50px;
-    font-variant: small-caps;          
+    font-variant: small-caps;  
+    font-family: var(--fonte2);        
 }
 header p {
     padding-bottom: 50px;
@@ -30,6 +41,8 @@ section{
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vh;
 }
 
 section.normal {
@@ -43,7 +56,7 @@ section.imagem {
 }
 section.imagem > p {
     background-color: rgba(0, 0, 0, 0.249);
-    width: 400px;
+    display: inline-block;
 }
 a{
     text-decoration: none;
