--- a/exercicios/Desafios/Desafio 12/style/estilo.css
+++ b/exercicios/Desafios/Desafio 12/style/estilo.css
@@ -45,6 +45,10 @@ section{
     font-size: 3.5vh;
 }
 
+section > p {
+    padding-bottom: 1em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -52,12 +56,26 @@ section.normal {
 
 section.imagem {
     background-color: rgb(51, 51, 51);
+    background-size: cover;
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.514);
+    background-attachment: fixed;
 }
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.249);
+    background-color: rgba(0, 0, 0, 0.549);
     display: inline-block;
+    text-shadow: 1px 1px 0px black;
 }
+
+section#img1 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img2 {
+    background-image: url('../imagens/background002.jpg');
+}
+
 a{
     text-decoration: none;
     font-weight: bolder;
