--- a/exercicios/ex026/mq004/estilos/mediaquery.css
+++ b/exercicios/ex026/mq004/estilos/mediaquery.css
@@ -2,30 +2,44 @@
 
 *{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.3em;
+    font-size: 1em;
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
-body, html{
-    width: 100vw;
+html{
     height: 100vh;
 }
 
 body{
     background: black url(../imagens/back-phone.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 
 main{
-    background-color: rgba(255, 255, 255, 0.236);
-    width: 90vw;
+    background-color: rgba(255, 255, 255, 0.689);
+    width: 400px;
     margin: auto;
+    margin-top: 20px;
     border-radius: 10px;
     padding: 10px;
 }
 
-img#phone{ display: none; }
+h1{
+    text-align: center;
+    color: white;
+    margin-top: 20px;
+    font-size: 2em;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.487);
+}
+
+img{
+    display: block;
+    margin: auto;
+}
+img#phone{ display: block; }
 img#pc{ display: none;}
 img#tablet{ display: none;}
 img#tv{display: none;}
