--- a/exercicios/ex026/mq004/estilos/mediaquery.css
+++ b/exercicios/ex026/mq004/estilos/mediaquery.css
@@ -1,46 +1,62 @@
 @charset "UTF-8";
 
-*{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1em;
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+@media print{
+    body{
+        background-image: url(../imagens/back-print.jpg);
+        
+    }/*desncessario pois não imprime background-image*/
+    
+    main{
+        border: 2px solid black;     
+    }
+
+    main h1{
+        font-family: 'Courier New', Courier, monospace;
+        color: black;
+        width: 90vw;
+    }
+
+    main::after{
+        content: 'Ess impressão foi feita através do site www.cursoemvideo.com';
+        text-decoration: overline;
+    }
+
+    img#phone{ display: none; }
+    img#pc{ display: none;}
+    img#tablet{ display: none;}
+    img#tv{display: none;}
+    img#print{display: block;}
 }
 
-html{
-    height: 100vh;
+@media screen and (max-width: 768px) and (max-width: 992) {
+    body{
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+    img#phone{ display: none; }
+    img#pc{ display: none;}
+    img#tablet{ display: block;}
+    img#tv{display: none;}
+    img#print{display: none;}
 }
 
-body{
-    background: black url(../imagens/back-phone.jpg) no-repeat;
-    background-size: cover;
-    background-position: center center;
+@media screen and (min-width:992) and (max-width:1200px) {
+    body{
+        background-image: url(../imagens/back-pc.jpg);
+    }
+    img#phone{ display: none; }
+    img#pc{ display: block;}
+    img#tablet{ display: none;}
+    img#tv{display: none;}
+    img#print{display: none;}
 }
 
-main{
-    background-color: rgba(255, 255, 255, 0.689);
-    width: 400px;
-    margin: auto;
-    margin-top: 20px;
-    border-radius: 10px;
-    padding: 10px;
+@media screen and (min-width:1200) {
+    body{
+        background-image: url(../imagens/back-tv.jpg);
+    }
+    img#phone{ display: none; }
+    img#pc{ display: none;}
+    img#tablet{ display: none;}
+    img#tv{display: block;}
+    img#print{display: none;}
 }
-
-h1{
-    text-align: center;
-    color: white;
-    margin-top: 20px;
-    font-size: 2em;
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.487);
-}
-
-img{
-    display: block;
-    margin: auto;
-}
-img#phone{ display: block; }
-img#pc{ display: none;}
-img#tablet{ display: none;}
-img#tv{display: none;}
-img#print{display: none;}
